--- a/style.css
+++ b/style.css
@@ -144,20 +144,9 @@ nav li:first-child {
 }
 
 /*------about-image-maincontainer------*/
-
-.name-h2 h2 {
+.about-name {
     cursor: default;
     font-size: 45px;
-}
-
-.name-h2 span {
-    display: flex;
-    flex-direction: column;
-    height: 100px;
-    width: 400px;
-    justify-content: center;
-    font-size: 30px;
-    color: rgb(48, 52, 105);
 }
 
 /*-----home-button-----*/
@@ -424,10 +413,11 @@ nav li:first-child {
 /* -----------Projects----------- */
 
 .projects {
-    height: 650px;
+    height: fit-content;
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
 
 }
 
@@ -532,131 +522,152 @@ nav li:first-child {
 .contactcontainer {
     display: flex;
     height: 80vh;
+    width: 100%;
+    align-items: center;
+}
+
+/* -----left contact-container----- */
+.left-contact {
+    width: 50%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.left-contact-child {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
 
-/*-----left-Contact-Heading-----*/
-.left-contact h2 {
-    height: 80px;
-    cursor: default;
+.left-contact-child-heading {
+    font-size: 20px;
+
+
 }
 
-/*-----left-Contact-Icons-1-----*/
-.gmail i {
-    margin-right: 10px;
+.left-contact-gmail {
+    display: flex;
+    font-size: 30px;
+
 }
 
-.gmail i:hover {
-    background-color: white;
-    color: black;
+.bx-envelope {
+    margin-top: 2px;
+    padding-right: 3px;
 
+}
+
+.left-contact-no {
+    display: flex;
+    font-size: 30px;
 }
 
 .bxs-phone {
-    font-size: 30px;
-    margin-top: 3px;
-    margin-right: 10px;
-    display: flex;
+    margin-top: 1px;
+    padding-right: 3px;
 }
 
-.gmail {
-    font-size: 30px;
-    margin-bottom: 40px;
-    margin-left: 0;
-    display: flex;
-    align-items: center;
-}
-
-.no {
-    font-size: 35px;
-    display: flex;
-    height: 60px;
-}
-
-/*-----left-Contact-Icons-2-----*/
 .contact-icons {
+    width: 150px;
     display: flex;
-    height: 70PX;
-    font-size: 30px;
-    width: 120px;
-    justify-content: space-between;
-    align-items: center;
+    font-size: 35px;
+    justify-content: space-around;
 }
 
-.contact-icons a i {
+.contact-icons i {
+    color: black;
     padding: 10px;
     border-radius: 30px;
-    color: black;
     transition-duration: 1s;
-}
 
-.contact-icons a i:hover {
-    transform: translatex(-10px);
 }
 
 /*-----Right-Contact- Input-----*/
-
-.input1 {
-    display: block;
-    border: none;
-}
-
-.input2 {
-    display: block;
-    margin-top: 20px;
-}
-
-.right-contact form input {
-
-    width: 390px;
-    padding: 20px;
-    margin-left: 0;
-    border-radius: 10px;
-    border: 2px solid black;
-    background-color: rgb(236, 234, 234);
+.right-contact {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
 
 }
 
-/*-----Right-Contact-Textarea-----*/
-.right-contact textarea {
-    width: 390px;
-    margin-top: 20px;
-    margin-left: 0;
-    border-radius: 10px;
-    padding: 20PX;
-    border: none;
-    font-size: 15PX;
-    border: 2px solid black;
-    background-color: rgb(236, 234, 234);
+.right-contact-child {
+    height: 100%;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
-/*-----Right-Contact-Button-----*/
+.right-contact-heading {
+    display: flex;
+    justify-content: center
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 30px;
+
+}
+
+form input {
+    height: 60px;
+    font-size: 15px;
+    padding: 8px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border-style: solid;
+    background-color: whitesmoke;
+
+}
+
+form textarea {
+    padding: 10px;
+    border: 2px solid gray;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: whitesmoke;
+    font-size: 18px;
+    height: 200px;
+}
+
 .contact-button {
+    width: 100%;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+
 }
 
 .contact-button button {
-
-    border: solid 2px black;
-    padding: 12px;
-    border-radius: 6px;
-    font-size: 15px;
-    font-weight: 600;
-    cursor: pointer;
-    width: 180px;
+    width: 100%;
+    height: 40px;
+    color: black;
+    border: 2px solid black;
+    padding: 0 10px;
+    border-radius: 5px;
     transition-duration: 1s;
-
 }
 
-.contact-button button:hover {
-    cursor: pointer;
-    background-color: black;
+.contact-button :hover {
     color: white;
+    background-color: black;
 }
+
+/*-----Right-Contact-Button-----*/
+
+
+
+
 
 /*---------Animation-keyframes---------*/
 @keyframes slideright {
@@ -834,59 +845,6 @@ nav li:first-child {
     }
 
 
-    .contactheading {
-        height: 150px;
-    }
-
-    .contact-icons {
-        margin: 0;
-    }
-
-    .contactcontainer {
-        display: flex;
-        justify-content: space-evenly;
-        margin: 0;
-        height: 80vh;
-        align-items: center;
-    }
-
-    .left-contact {
-        margin-left: 0;
-        margin: 0;
-
-
-    }
-
-    .right-contact {
-
-        margin-left: 0;
-        margin-top: 30px;
-    }
-
-    .gmail {
-        font-size: 28px;
-    }
-
-    .right-contact form input {
-
-        width: 340px;
-        padding: 20px;
-        margin-left: 0;
-        border-radius: 10px;
-        border: 2px solid black;
-
-    }
-
-    .right-contact textarea {
-        width: 340px;
-        margin-top: 20px;
-        margin-left: 0;
-        border-radius: 10px;
-        padding: 20PX;
-        border: none;
-        font-size: 15PX;
-        border: 2px solid black;
-    }
 
 
 
@@ -1041,59 +999,12 @@ nav li:first-child {
         font-size: 20px;
     }
 
-    .contactcontainer {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        margin: 0;
-        height: 400px;
-    }
-
-    .gmail {
+    .left-contact-child-heading {
         font-size: 17px;
     }
 
-    .no {
-        font-size: 22px;
-        margin: 0;
-        margin-bottom: 10px;
-    }
-
-
-
-
-    .right-contact form input {
-        width: 340px;
-        padding: 15px;
-        margin-left: 0;
-        border-radius: 10px;
-    }
-
-    .right-contact textarea {
-        width: 340px;
-        margin-top: 20px;
-        margin-left: 0;
-        border-radius: 10px;
-        padding: 15PX;
-        font-size: 10PX;
-
-    }
-
-    .right-contact button {
-
-
-        padding: 12px;
-        border-radius: 15px;
-        font-size: 12px;
-        font-weight: 600;
-
-    }
-
-    .contact-icons {
-        display: flex;
-        justify-content: space-between;
-        width: 200px;
-        height: 60px;
+    .left-contact-gmail {
+        font-size: 20px;
     }
 
 
@@ -1244,10 +1155,18 @@ nav li:first-child {
         font-size: 16px;
     }
 
-    .name-h2 h2 {
-        font-size: 25px;
+    .h2 {
+        width: 100%;
     }
 
+.about-name{
+    font-size: 15px;
+    
+}
+    .name-h2 span {
+        font-size: 20px;
+        padding-top: 10px;
+    }
 
     .about-icons {
         display: flex;
@@ -1529,119 +1448,61 @@ nav li:first-child {
 
     }
 
-    /* ----------------------contact-------------------------- */
-
+    /* ------contact------ */
     .contactcontainer {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 800px;
-
+        height: fit-content;
     }
 
+    .contactheading {
+        font-size: 20px;
+    }
 
     .left-contact {
-        height: 300px;
+        height: 50%;
+        width: 80%;
+    }
+
+    .left-contact-child {
+        height: 100%;
+        width: 100%;
+    }
+
+    .left-contact-child-heading {
         font-size: 15px;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
+        padding-top: 20px;
     }
 
-    .left-h2 {
-
-        font-size: 20px;
-        margin: 0;
-
-    }
-
-    .gmail {
+    .left-contact-gmail {
         font-size: 25px;
-        display: flex;
-        height: 60px;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 0;
-
-
+        padding-top: 50px;
     }
 
-    .no {
-        font-size: 28px;
-        display: flex;
-        height: 60px;
+    .left-contact-no {
+        font-size: 25px;
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+
+    form {
+        height: 100%;
         width: 100%;
-        justify-content: center;
-        align-items: center;
-        margin: 10px;
+    }
+
+    form input {
+        height: 30px;
     }
 
     .right-contact {
-        font-size: 15px;
-        margin: 0;
-        margin-top: 50px;
-        height: 400px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        height: 50%;
+        width: 80%;
+        padding: 0 20px;
     }
 
-    .right-contact form input {
-        width: 340px;
-        padding: 15px;
-        margin-left: 0;
-
-
+    .right-contact-heading {
+        padding-top: 10px;
     }
-
-    .right-contact textarea {
-        width: 340px;
-        margin-top: 20px;
-        margin-left: 0;
-        border-radius: 10px;
-        padding: 15PX;
-        font-size: 10PX;
-    }
-
-    .contact-button {
-        padding: 12px;
-        border-radius: 15px;
-        font-size: 12px;
-        font-weight: 600;
-        height: 100px;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .contact-icons {
-        width: 250px;
-        height: 80px;
-        align-items: center;
-        margin: 0;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .contact-icons img {
-        height: 45px;
-        width: 45px;
-    }
-
-    .icon-in {
-        margin: 0;
-    }
-
-    .icon-gmail {
-        margin: 0;
-    }
-
 }
 
 /*--------- small-mobile-screen-------*/
@@ -2109,7 +1970,7 @@ nav li:first-child {
         text-align: justify;
         line-height: 1.1;
         font-size: 15px;
-    
+
 
 
     }
@@ -2124,137 +1985,5 @@ nav li:first-child {
 
     /* ----------------------contact-------------------------- */
 
-    .contactheading {
-        font-size: 17px;
-        height: 100px;
-    }
 
-    .contactcontainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: fit-content;
-    }
-
-
-    .left-contact {
-        height: 200px;
-        font-size: 12px;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-
-    .left-h2 {
-        margin: 0;
-        height: fit-content;
-        width: 100%;
-
-    }
-
-    .left-h2 h2 {
-        font-size: 16px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 8px;
-        height: 40px;
-    }
-
-    .gmail {
-        font-size: 12px;
-        display: flex;
-        height: 60px;
-        width: fit-content;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 0;
-        padding-left: 20px;
-    }
-
-    .gmail i {
-        margin: 0;
-
-    }
-
-    .no {
-        font-size: 18px;
-        display: flex;
-        height: 60px;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        margin: 10px;
-        margin: 0;
-    }
-
-    .right-contact {
-        font-size: 15px;
-        margin: 0;
-        margin-top: 70px;
-        height: 400px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .right-contact form input {
-        width: fit-content;
-        padding: 15px;
-        margin-left: 0;
-        border-radius: 10px;
-    }
-
-    .right-contact textarea {
-        width: fit-content;
-        margin-top: 20px;
-        margin-left: 0;
-        border-radius: 10px;
-        padding: 15PX;
-        font-size: 13px;
-    }
-
-    .contact-button {
-        padding: 12px;
-        border-radius: 15px;
-        font-size: 12px;
-        font-weight: 600;
-        height: 100px;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .contact-button button {
-        width: 100px;
-        height: 30px;
-        font-size: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .contact-icons {
-        width: fit-content;
-        margin: 0;
-        display: flex;
-    }
-
-    .contact-icons img {
-        height: 30px;
-        width: 30px;
-    }
-
-    .icon-in {
-        margin: 0;
-    }
-
-    .icon-gmail {
-        margin: 0;
-    }
 }
