--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ body {
 }
 
 /*------deskots-screen-----*/
-span {
-    color: yellowgreen;
-}
+
 
 /*------mobile-navbar------*/
 
@@ -118,6 +116,7 @@ nav li:first-child {
     justify-content: space-evenly;
     animation-name: slideright;
     animation-duration: 1s;
+
 }
 
 /*---heading---*/
@@ -145,11 +144,22 @@ nav li:first-child {
 
 /*------about-image-maincontainer------*/
 .about-name {
+    height: fit-content;
     cursor: default;
-    font-size: 45px;
+    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 10px;
 }
 
-/*-----home-button-----*/
+.about-name span {
+    color: rgb(214, 186, 134);
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+
 .cv-button {
     height: 100px;
     width: 370px;
@@ -297,6 +307,10 @@ nav li:first-child {
 
 }
 
+.skillcontainer span {
+    color: yellowgreen;
+}
+
 /*--skill-fron-end-heading--*/
 
 .frontEnd-heading h2 {
@@ -435,7 +449,7 @@ nav li:first-child {
     height: 480px;
     width: 300px;
     border-radius: 8px;
-    box-shadow: 3px 2px 20px 0.5px rgb(59, 59, 55);
+    box-shadow: 3px 3px 15px 0.5px rgb(59, 59, 55);
 
 
 }
@@ -626,6 +640,8 @@ form input {
     border-radius: 5px;
     border-style: solid;
     background-color: whitesmoke;
+    outline: none;
+
 
 }
 
@@ -637,6 +653,7 @@ form textarea {
     background-color: whitesmoke;
     font-size: 18px;
     height: 200px;
+    outline: none;
 }
 
 .contact-button {
@@ -651,16 +668,18 @@ form textarea {
 .contact-button button {
     width: 100%;
     height: 40px;
-    color: black;
-    border: 2px solid black;
+    color: gray;
+    border: 2px solid rgb(99, 98, 98);
     padding: 0 10px;
     border-radius: 5px;
     transition-duration: 1s;
+    font-size: 20px;
 }
 
 .contact-button :hover {
-    color: white;
-    background-color: black;
+    color: whitesmoke;
+    background-color: gray;
+
 }
 
 /*-----Right-Contact-Button-----*/
@@ -844,9 +863,9 @@ form textarea {
         align-items: center;
     }
 
-
-
-
+    .projectcart1 {
+        box-shadow: 3px 3px 10px 0.5 black;
+    }
 
 
 
@@ -864,6 +883,18 @@ form textarea {
 
     }
 
+    .about-name {
+        font-size: 18px;
+        padding: 0;
+    }
+
+    .about-name span {
+        height: 60px;
+        display: flex;
+        align-items: center;
+        font-size: 22px;
+    }
+
     #About {
         margin: 0;
         height: 100px;
@@ -871,11 +902,9 @@ form textarea {
         align-items: center;
     }
 
-
-
     .aboutcontainer {
         margin: 0;
-        height: 600px;
+        height: 400px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -894,7 +923,7 @@ form textarea {
         height: fit-content;
         width: 90%;
         font-size: 24px;
-        line-height: 24px;
+        line-height: 1.4;
     }
 
     .about-container {
@@ -929,25 +958,21 @@ form textarea {
 
     }
 
-
     .about-image img {
         height: 250px;
         width: 250px;
-
-
     }
 
     .about-icons {
         justify-content: space-between;
     }
 
-
-
     .skillheading {
         display: flex;
         margin: 0;
         height: 150px;
         align-items: center;
+        font-size: 20px;
     }
 
     .frontEnd-heading h2 {
@@ -983,19 +1008,27 @@ form textarea {
 
     .Front-end img {
 
-        height: 120px;
-        width: 120px;
+        height: 100px;
+        width: 100px;
     }
 
     .back-end img {
 
-        height: 120px;
-        width: 120px;
+        height: 100px;
+        width: 100px;
 
     }
 
     .projects-title {
         align-items: center;
+        font-size: 20px;
+    }
+
+    .projectcart1 {
+        box-shadow: 3px 3px 10px 0.5 black;
+    }
+
+    .contactheading {
         font-size: 20px;
     }
 
@@ -1124,6 +1157,10 @@ form textarea {
         width: 300px;
         margin-bottom: 20px;
         align-items: center;
+        height: 200px;
+        width: 100%;
+        align-items: center;
+        font-size: 16px;
     }
 
     .cv-button {
@@ -1161,12 +1198,12 @@ form textarea {
 
     .about-name {
         font-size: 15px;
-
+        padding: 0;
+        margin: ;
     }
 
     .name-h2 span {
         font-size: 20px;
-        padding-top: 10px;
     }
 
     .about-icons {
@@ -1243,8 +1280,8 @@ form textarea {
         align-items: center;
         height: fit-content;
         width: 90%;
-        font-size: 20px;
-        line-height: 24px;
+        font-size: 17px;
+        line-height: 1.4;
     }
 
 
@@ -1368,7 +1405,17 @@ form textarea {
     }
 
     .projectcart1 {
-        height: 470px;
+        height: fit-content;
+        width: 230px;
+    }
+
+    .project1-heading-1 {
+        font-size: 11px;
+    }
+
+    .project1-para {
+        font-size: 14px;
+        line-height: 1.4;
     }
 
     /*------------------------backEnd-------------------- */
@@ -1446,6 +1493,7 @@ form textarea {
         width: 80px;
         height: 100px;
         font-size: 8px;
+        margin-top: 26px;
 
     }
 
@@ -1545,7 +1593,6 @@ form textarea {
     }
 
     .nav-option a {
-        /* background-color: black; */
         color: white;
         display: flex;
         justify-content: center;
@@ -1574,13 +1621,9 @@ form textarea {
     }
 
     /* -----------about--------------- */
-
-
-
     .about-image {
         display: none;
     }
-
     .about-container {
         display: flex;
         margin: 0;
@@ -1598,21 +1641,30 @@ form textarea {
         height: 300px;
     }
 
+    .about-name {
+        padding: 0;
+        height: 90px;
+        display: flex;
+        align-items: end;
+        justify-content: end;
+    }
+
     .about-head h2 {
         display: flex;
         flex-direction: column;
         justify-content: center;
         color: black;
         width: 100%;
-        margin-top: 10px;
-        margin-bottom: 0px;
         align-items: center;
-        font-size: 14px;
-        height: 80PX;
+        font-size: 17px;
+        
     }
 
     .about-head h2 span {
-        font-size: 10.5px;
+        font-size: 16px;
+        height: 40px;
+        display: flex;
+        align-items: center;
     }
 
     .mobile-version {
@@ -1657,34 +1709,14 @@ form textarea {
         opacity: 0.7;
     }
 
-    .name-h2 {
-        height: 350px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 12px;
-        color: brown;
-        margin: 0;
-        margin-top: 50px;
-    }
-
-    .name-h2 span {
-        font-size: 14px;
-        align-items: center;
-        height: 100px;
-        width: fit-content;
-        font-weight: bold;
-    }
 
 
     .about-icons {
         display: flex;
         padding: 10px;
-        width: 150px;
+        width: 100%;
         margin-top: 0px;
-        height: 60PX;
+        height: fit-content;
         justify-content: space-evenly;
         align-self: center;
         padding: 0;
@@ -1834,7 +1866,7 @@ form textarea {
         align-items: center;
         height: 30px;
         width: 100%;
-        font-size: 10px;
+        font-size: 11px;
         padding: 2px;
         margin-top: 0px;
     }
@@ -1906,7 +1938,8 @@ form textarea {
     }
 
     .back-end p {
-        font-size: 10px;
+        font-size: 11px;
+        
 
     }
 
@@ -1942,7 +1975,7 @@ form textarea {
         width: fit-content;
         height: fit-content;
         font-size: 8px;
-        margin-top: 35px;
+        margin-top: 28px;
     }
 
     .projects-title {
@@ -1958,8 +1991,8 @@ form textarea {
     }
 
     .projectcart1 {
-        height: 410px;
-        width: 200px;
+        height: fit-content;
+        width: 230px;
     }
 
     .project1-heading-1 {
@@ -1970,7 +2003,7 @@ form textarea {
     .project1-para {
         padding: 10px 10px;
         text-align: justify;
-        line-height: 1.1;
+        line-height: 1.3;
         font-size: 15px;
 
 
@@ -2037,12 +2070,17 @@ form textarea {
 
     .right-contact {
         height: 50%;
-        width: 80%;
+        width: 100%;
         padding: 0 20px;
+
     }
 
     .right-contact-heading {
-        padding:20px ;
+        padding: 20px;
+    }
+
+    .right-contact-child {
+        align-items: center;
     }
 
     /* ----------------------contact-------------------------- */
