feat : Adusting javascript

--- a/style.css
+++ b/style.css
@@ -1199,7 +1199,7 @@ form textarea {
     .about-name {
         font-size: 15px;
         padding: 0;
-        margin: ;
+        margin: 0;
     }
 
     .name-h2 span {
