--- a/style.css
+++ b/style.css
@@ -5,22 +5,16 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-html {
-    scroll-behavior: smooth;
-
-}
-
 body {
     background-color: whitesmoke;
+    scroll-behavior: smooth;
 }
-
-/*------deskots-screen-----*/
-
 
 /*------mobile-navbar------*/
 
 .mobile-nav {
     display: none;
+    z-index: 100;
 }
 
 .hideondeskot {
@@ -38,6 +32,7 @@ nav {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
 }
 
 .nav-heading a {
@@ -96,6 +91,7 @@ nav li:first-child {
     justify-content: space-evenly;
     align-items: center;
     height: 92vh;
+
 
 
 }
@@ -232,10 +228,9 @@ nav li:first-child {
     align-items: center;
     cursor: default;
 
-
 }
 
-.aboutheading h1 {
+.aboutheading h1 {  
     color: black;
 }
 
@@ -244,12 +239,18 @@ nav li:first-child {
 }
 
 /*----about-maincontainer----*/
-.aboutcontainer {
+   .aboutcontainer {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 80vh;
+    animation: slideleft1 ;
+    animation-duration: 0.5s;
+    animation-timeline: view();
+    animation-range: entry 0 cover 45%;
+    
 }
+
 
 /*--about-img--*/
 .imag-about {
@@ -278,7 +279,7 @@ nav li:first-child {
     font-size: 23px;
     text-align: justify;
     line-height: 1.4;
-    animation-name: slideleft-1;
+  
 }
 
 /* --------------------------- skills-------------------------------- */
@@ -710,8 +711,29 @@ form textarea {
         transform: translateX(0);
     }
 }
+@keyframes scroll{
+    from{
+        opacity: 0.5;
+        scale: 0.5;
+    }
+    to{
+        opacity: 1;
+        scale: 1;
+    }
+}
+@keyframes slideleft1 {
+    from {
+        transform: translateX(2500px);
+        opacity: 0.5;
+        scale: 0.5;
+    }
 
-
+    to {
+        transform: translateX(0);
+        opacity:1;
+        scale: 1;
+    }
+}
 
 
 /*-------resposive-screens-----*/
