--- a/style.css
+++ b/style.css
@@ -1009,7 +1009,7 @@ form textarea {
     .about-head {
 
         font-size: 20px;
-        width: 180px;
+        width: 100%;
 
     }
 
@@ -1249,6 +1249,8 @@ form textarea {
         justify-content: center;
         align-items: center;
         margin-top: 30px;
+    
+    
     }
 
     .mobile-versoion-image img {
@@ -1256,6 +1258,8 @@ form textarea {
         width: 250px;
         border-radius: 150px;
         background-image: linear-gradient(black, white);
+        animation-name: slideright ;
+        animation-duration: 1s;
     }
 
 
@@ -1276,18 +1280,19 @@ form textarea {
         margin-left: 0px;
         padding-top: 0px;
         font-size: 30px;
-        width: 700px
+        width: 100%;
+        animation: none;
+       
+    
     }
 
     .about-head h2 {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 500px;
-        width: 300px;
-        margin-bottom: 20px;
+        width: 100%; 
         align-items: center;
-        height: 200px;
+        height: fit-content;
         width: 100%;
         align-items: center;
         font-size: 16px;
@@ -1320,16 +1325,15 @@ form textarea {
         justify-content: center;
         align-items: center;
         font-size: 16px;
+        animation-name: slideleft ;
+        animation-duration: 1s;
+ 
     }
-
-    .h2 {
-        width: 100%;
-    }
-
     .about-name {
         font-size: 15px;
         padding: 0;
         margin: 0;
+        height: fit-content;
     }
 
     .name-h2 span {
@@ -1769,6 +1773,7 @@ form textarea {
         padding-top: 0px;
         font-size: 30px;
         height: 300px;
+        animation: none;
     }
 
     .about-name {
@@ -1777,6 +1782,7 @@ form textarea {
         display: flex;
         align-items: end;
         justify-content: end;
+        
     }
 
     .about-head h2 {
@@ -1816,10 +1822,24 @@ form textarea {
         width: 180px;
         border-radius: 150px;
         background-image: linear-gradient(black, white);
+        animation-name: slideright ;
+        animation-duration: 1s;
     }
 
 
 
+    .name-h2 {
+        height: 200px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        animation-name: slideleft ;
+        animation-duration: 1s;
+ 
+    }
     .cv-button {
         display: flex;
         justify-content: center;
